--- a/src/styles/CircularProgressBar.css
+++ b/src/styles/CircularProgressBar.css
@@ -21,3 +21,6 @@
     color: #2c3e50;
   }
   
+   .circular-text.dark{
+    color: #e2e2e2;
+   }
